# sds

./: .gitignore  README.md  pyproject.toml
guides/: 09_ai_apis_and_ollama.ipynb
setup/: SETUP-PC.md  SETUP-WSL.md  SETUP-linux.md  SETUP-mac.md  report.txt  troubleshooting.ipynb
week1/: lab1.ipynb  lab2.ipynb  lab3.ipynb  solution_tools_on_lab2.ipynb
week4/: accounts.db
week4/memory/: Cathie.db  ed.db
