[project]
name = "sds"
version = "0.1.0"
description = "The SuperDataScience AI Bootcamp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.53.0",
    "chromadb>=1.0.12",
    "gradio>=5.33.1",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-openai>=0.3.22",
    "mcp[cli]>=1.9.3",
    "openai>=1.86.0",
    "openai-agents>=0.0.17",
    "playwright>=1.52.0",
    "plotly>=6.1.2",
    "polygon-api-client>=1.14.6",
    "psutil>=7.0.0",
    "pypdf>=5.6.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "speedtest-cli>=2.1.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
